--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -1,5 +1,6 @@
 @import "normalize.scss";
 @import "variables.scss";
+@import "font.scss";
 
 html{font-size:16px}
 @media screen and (min-width:300px) and (max-width:374px){html{font-size:12px}}
