--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,12 +1,12 @@
 /* px to em */
-@function px2em($px, $base-font-size: 13px) {
+@function px2rem($px, $base-font-size: 14px) {
   @if (unitless($px)) {
     @warn "Assuming #{$px} to be in pixels, attempting to convert it into pixels for you";
     @return px2em($px + 0px); // That may fail.
-  } @else if (unit($px) == em) {
+  } @else if (unit($px) == rem) {
     @return $px;
   }
-  @return ($px / $base-font-size) * 1em;
+  @return ($px / $base-font-size) * 1rem;
 }
 
 /* 颜色 */
