--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -52,7 +52,6 @@ body {
   webkit-tap-highlight-color: transparent;
   overflow-x: hidden;
   position: relative;
-  background: $color-bg;
 }
 ::-webkit-scrollbar {
   width: 0px;
@@ -67,5 +66,6 @@ ul {
 }
 #app {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  background: $color-bg;
 }
