add list-header and search-bar components

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -37,6 +37,8 @@ $color-img-bg-error: #c8c8c8;
 /* 失败图片的字体色 */
 $color-img-text-error: #e4e4e4;
 
+$color-bg-search-input: #f2f2f2;
+
 /* 字号 */
 /* 首页的“您好！用户名称”，大尺寸价格 */
 $font-size-h1: px2rem(25px);
