--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -69,3 +69,12 @@ ul {
   height: 100%;
   background: $color-bg;
 }
+.mask {
+  background: $color-bg-wrap;
+}
+button {
+  border: 0;
+  outline: 0;
+  -webkit-appearance: none;
+  background: transparent;
+}
