--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -48,7 +48,10 @@ $font-size-h2: px2rem(20px);
 $font-size-h3: px2rem(15px);
 /* 部分按钮 */
 $font-size-btn: px2rem(15px);
+/* 展开 */
+$font-size-unfold: px2rem(10px);
 /* 大部分正文 */
 $font-size-text: px2rem(12px);
 /* 说明内容，icon 后缀文字 */
 $font-size-small: px2rem(10px);
+
